frame/support/test/tests/pallet_ui/error_wrong_item.stderr
error: Invalid pallet::error, expected item enum
  --> $DIR/error_wrong_item.rs:19:2
   |
19 |     pub struct Foo;
   |     ^^^
